tests/ui/impl-trait/defining-use-captured-non-universal-region.infer.stderr
error[E0792]: expected generic lifetime parameter, found `'_`
  --> $DIR/defining-use-captured-non-universal-region.rs:13:18
   |
LL | fn foo<'a>() -> impl Sized + 'a {
   |                              -- this generic parameter must be used with a generic lifetime parameter
...
LL |     let i: i32 = foo::<'_>();
   |                  ^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0792`.
